fix gap in sticky pr toolbar, make shadow less intense

--- a/github-dark.css
+++ b/github-dark.css
@@ -9110,10 +9110,9 @@
   /* sticky header tweaks */
   .pr-toolbar.is-stuck + .toolbar-shadow {
     background: #181818 !important;
-    top: 0 !important;
     height: 60px !important;
     border: none !important;
-    box-shadow: 0 0 .75rem rgba(0, 0, 0, .7) !important;
+    box-shadow: 0 0 .75rem rgba(0, 0, 0, .3) !important;
   }
   /* issue #1056 */
   .toolbar-shadow[style*="top: 60px"] {
